# r-tda

./: .Rbuildignore  .gitignore  .lintr  .travis.yml  CONTRIBUTING.md  DESCRIPTION  LICENSE.note  Makefile  NAMESPACE  NEWS  README.md
R/: animate.ripsFilt.R  bootstrapBand.R  bootstrapDiagram.R  distFct.R  dtm.R  filtrationDiag.R  findKtree.R  funFiltration.R  gridDiag.R  kde.R  knnDE.R  landscape.R  plot.clusterTree.R  plot.diagram.R  plot.ripsFilt.R  print.clusterTree.R  ripsDiag.R  ripsFiltration.R  silhouette.R
R_persistence/: DESCRIPTION  TODO.txt  buildInstruction.txt  libraryTrace.txt  styleGuide.txt
R_persistence/misc/: styleGuide.txt
R_persistence/src/: init.c
R_persistence/utilityTDA/: countDownloadPackage.R
R_persistence/versionCurrent/: .RData  .Rhistory
inst/: COPYRIGHTS
man/: TDA-package.Rd  alphaComplexDiag.Rd  alphaComplexFiltration.Rd  alphaShapeDiag.Rd  alphaShapeFiltration.Rd  animate.ripsFilt.Rd  bootstrapDiagram.Rd  bottleneck.Rd  distFct.Rd  filtrationDiag.Rd  plot.ripsFilt.Rd  ripsDiag.Rd  ripsFiltration.Rd  silhouette.Rd  wasserstein.Rd
misc/: buildInstruction.txt  libraryTrace.txt
misc/height-filtration/: CMakeLists.txt  filtration-persistence.cpp  height_filtration.h  point.h
src/: .diag.cpp.swp  .grid.h.swp  RcppExports.cpp  alphaComplex.h  alphaComplexb.h  alphaShape.h  alphaShapeb.h  diag.cpp  dtm.h  grid.h  kde.h  rips.h  ripsb.h
src/CGAL/: Triangulation.h
src/dionysus/: simplex.h
src/gudhi/: Alpha_complex.h  Persistent_cohomology.h  Simplex_tree.h
src/tdautils/: .swp  (+13 more)
tests/: testthat.R
vignettes/: biblio.bib
(+140 files in other folders)
